--- a/task/geonamesExample/index.html
+++ b/task/geonamesExample/index.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8">
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PHP Technique</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+
+
 </head>
 <body>
     
+    <div class="header">
+
+    </div>
+
+    <div class="main">
+        <select id="selCountry">
+            <option value=6600>6600</option>
+            <option value="FR">london</option>
+            <option value="DE">2921044</option>
+            <option value="US">Muse</option>
+            <option value="DE">it</option>
+        </select>
+        <select id="selPostalcode">
+            <option value="GB1">4.881</option>
+            <option value="FR1">DE</option>
+            <option value="DE1"></option>
+            <option value="US1"></option>
+            <option value="IN1"></option>
+        </select>
+        <button  type="submit">Run</button>
+
+        <br>
+        <br>
+        <div id="div1">
+        <table>
+            <tbody>
+                <tr>
+                    <td>CountryCode:</td>
+                    <td id="txtcode"> </td>
+                </tr>
+                <tr>
+                    <td>PostalCode:</td>
+                    <td id="txtmaxcode"> </td>
+                </tr>
+                <tr>
+                    <td>Street:</td>
+                    <td id="txtmincode"> </td>
+                </tr>
+            </tbody>
+        </table>
+        </div>
+    </div>
+
+    <div id="preloader">
+       
+
+    </div>
+
+   <script src="libs/js/script.js" type="text/javascript"></script>
+    <script src="libs/js/jquery.js" type="application/javascript"></script>
+  <script src="https://code.jquery.com/jquery-2.2.1.min.js" integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00=" crossorigin="anonymous"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 </body>
 </html>
