--- a/task/geonamesExample/index.html
+++ b/task/geonamesExample/index.html
@@ -27,7 +27,7 @@
         <select id="selPostalcode">
             <option value="GB1">4.881</option>
             <option value="FR1">DE</option>
-            <option value="DE1"></option>
+            <option value="AT">AT</option>
             <option value="US1"></option>
             <option value="IN1"></option>
         </select>
