--- a/task/geonamesExample/index.html
+++ b/task/geonamesExample/index.html
@@ -113,6 +113,29 @@
             </tbody>
         </table>
         </div>
+
+        <div id="div2">
+            <table>
+                <tbody>
+                    <tr>
+                        <td>PlaceName:</td>
+                        <td id="txtplace"> </td>
+                    </tr>
+                    <tr>
+                        <td>Latitude:</td>
+                        <td id="txtlati"> </td>
+                    </tr>
+                    <tr>
+                        <td>Longitude:</td>
+                        <td id="txtlong"> </td>
+                    </tr>
+                    <tr>
+                        <td>CountryCode:</td>
+                        <td id="txtccode"> </td>
+                    </tr>
+                </tbody>
+            </table>
+            </div>
     </div>
 
     <div id="preloader">
@@ -121,6 +144,7 @@
     </div>
 
    <script src="libs/js/script.js" type="text/javascript"></script>
+   <script src="libs/js/script1.js" type="text/javascript"></script>
     <script src="libs/js/jquery.js" type="application/javascript"></script>
   <script src="https://code.jquery.com/jquery-2.2.1.min.js" integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00=" crossorigin="anonymous"></script> 
 </body>
