--- a/task/geonamesExample/index.html
+++ b/task/geonamesExample/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <title>PHP Technique</title>
+    <meta name="author" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PHP Technique</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+    <link href="favicon.ico.png" rel="icon">
+    <link href="css/style.css" rel="stylesheet" >
+    <link href="venders/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 </head>
 <body>
@@ -171,6 +173,7 @@
    <script src="libs/js/script1.js" type="text/javascript"></script>
    <script src="libs/js/script2.js" type="text/javascript"></script>
     <script src="libs/js/jquery.js" type="application/javascript"></script>
-  <script src="https://code.jquery.com/jquery-2.2.1.min.js" integrity="sha256-gvQgAFzTH6trSrAWoH1iPo9Xc96QxSZ3feW6kem+O00=" crossorigin="anonymous"></script> 
+    <script src="venders/jquery/jquery-3.6.0.min.js" ></script>
+    <script src="venders/bootstrap/js/bootstrap.min.js" ></script>
 </body>
 </html>
