--- a/task/geonamesExample/index.html
+++ b/task/geonamesExample/index.html
@@ -10,6 +10,8 @@
     <link href="favicon.ico.png" rel="icon">
     <link href="css/style.css" rel="stylesheet" >
     <link href="venders/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Andika+New+Basic:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
 <body>
