--- a/task/geonamesExample/index.html
+++ b/task/geonamesExample/index.html
@@ -8,9 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="favicon.ico.png" rel="icon">
-    <link href="css/style.css" rel="stylesheet" >
+    <link href="libs/css/style.css" rel="stylesheet" >
     <link href="venders/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <script src="venders/jquery/jquery-3.6.0.min.js" ></script>
 <link href="https://fonts.googleapis.com/css2?family=Andika+New+Basic:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
@@ -23,8 +24,8 @@
     <div class="main">
 
         <div class="container">
-            <h2>Bordered Table</h2>
-            <p>The .table-bordered class adds borders to a table:</p>            
+            <h2>Geonames APIs</h2>
+            <p>Select options from dropdown list and get information.</p>            
             <table class="table table-bordered">
               <thead>
                 <tr>
@@ -91,11 +92,12 @@
 
         <br>
         <br>
-        <div id="div1">
+        <div class="row" >
+        <div id="div1"  class="col-sm-5" >
         <table>
-            <tbody>
+            <tbody >
                 <tr>
-                    <td>Summary:</td>
+                    <td >Summary:</td>
                     <td id="txtcode"> </td>
                 </tr>
                 <tr>
@@ -118,7 +120,7 @@
         </table>
         </div>
 
-        <div id="div2">
+        <div id="div2" class="col">
             <table>
                 <tbody>
                     <tr>
@@ -141,7 +143,7 @@
             </table>
             </div>
 
-            <div id="div3">
+            <div id="div3" class="col">
                 <table>
                     <tbody>
                         <tr>
@@ -163,6 +165,7 @@
                     </tbody>
                 </table>
                 </div>
+            </div>
 
     </div>
 
@@ -175,7 +178,7 @@
    <script src="libs/js/script1.js" type="text/javascript"></script>
    <script src="libs/js/script2.js" type="text/javascript"></script>
     <script src="libs/js/jquery.js" type="application/javascript"></script>
-    <script src="venders/jquery/jquery-3.6.0.min.js" ></script>
+    
     <script src="venders/bootstrap/js/bootstrap.min.js" ></script>
 </body>
 </html>
