--- a/task/geonamesExample/index.html
+++ b/task/geonamesExample/index.html
@@ -45,7 +45,7 @@
                         <option value="kashmir">Kashmir</option>
                     </select>
                   </td>
-                  <td><button type=submit >Search</button></td>
+                  <td><button id="btnwiki" type=submit >Search</button></td>
                 </tr>
                 <tr>
                   <td>postalCodeLookup</td>
@@ -65,7 +65,7 @@
                         <option value="US">United States</option>
                     </select>
                   </td>
-                  <td><button type=submit >Search</button></td>
+                  <td><button id="btnpost" type=submit >Search</button></td>
                 </tr>
                 <tr>
                   <td>streetNameLookup</td>
@@ -84,7 +84,7 @@
                       <option value="DK">Denmark</option>
                   </select>
                 </td>
-                  <td><button type=submit >Search</button></td>
+                  <td><button id="btnstreet" type=submit >Search</button></td>
                 </tr>
               </tbody>
             </table>
