--- a/project1/index.html
+++ b/project1/index.html
@@ -234,7 +234,7 @@
             
             
    
-        <script src="venders/geojson/countryBorders.js" type="text/javascript"></script>
+        <script src="" type="text/javascript"></script>
         <script src="libs/js/getCountryInfo.js" type="text/javascript"></script>
         <script src="libs/js/covid.js" type="text/javascript"></script>
         <script src="libs/js/getWeather.js" type="text/javascript"></script>
