--- a/project1/index.html
+++ b/project1/index.html
@@ -5,13 +5,13 @@
     <title>Gazetteer</title>
     <meta name="author" content="Payal">
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
     <link href="favicon.ico.png" rel="icon">
     <script src="venders/jquery/jquery-3.6.0.min.js" ></script>
     <link href="venders/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="libs/css/style.css" type="text/css" rel="stylesheet" >
-    <link rel="stylesheet" href="F:\xampp\htdocs\payalVimal\project1\venders\fontawesome-free-5.15.3-web\css\all.css">
+    <link rel="stylesheet" href="venders/fontawesome-free-5.15.3-web/css/all.css">
   
     <link rel="preconnect" href="https://fonts.gstatic.com">
    
@@ -66,12 +66,12 @@
         <div id="mapid"></div> 
 
          <!-- Logo image -->
-        <img class="recenter" src="venders/image/cursor.svg" alt="recenter">
-
-         <!-- Overlay box -->
-        <div class="container w-50">
-          <h3>More Info.</h3>
+        <img class="recenter" src="venders/image/cursor1.png" alt="recenter">
           
+         <!-- Overlay box -->
+        <div class="container ">
+          <h3 class="up"><img src="venders/image/up.png" alt="up"></h3>
+
            <table >
             <tbody>
               <tr>
@@ -160,7 +160,7 @@
               <tr>
                 <td></td>
                 <td>Coordinates:</td>
-                <td id="name1"></td>
+                <td id="name"></td>
               </tr>
               </tbody>
             </table>
