--- a/project1/index.html
+++ b/project1/index.html
@@ -47,8 +47,8 @@
                        <option value="australia">Australia</option>
                        <option value="france">France</option>
                        <option value="italy">Italy</option>
-                       <option value="Canada">Canada</option>
                        <option value="new%20zealand">New Zealand</option>
+                        <option value="canada">Canada</option>
                    </select>
 
                     <button id="btnwiki" class="nav-item bg-light" >Search</button>
@@ -157,11 +157,6 @@
                 <td>Wikipedia Url:</td>
                 <td id="txtwiki"></td>
               </tr>
-              <tr>
-                <td></td>
-                <td>Coordinates:</td>
-                <td id="name"></td>
-              </tr>
               </tbody>
             </table>
          </div>
@@ -174,11 +169,13 @@
        
         <div id="preloader">
           <script src="libs/js/jquery.js" type="application/javascript"></script>
-          <script src="libs/js/getCountryBorder.js" type="text/javascript"></script>
+          <script src="libs/js/countryBorders.js" type="text/javascript"></script>
           <script src="libs/js/getCountryInfo.js" type="text/javascript"></script>
           <script src="libs/js/covid.js" type="text/javascript"></script>
+          <script src="libs/js/lines.js" type="text/javascript"></script>
           <script src="libs/js/getWeather.js" type="text/javascript"></script>
           <script src="libs/js/getWiki.js" type="text/javascript"></script>
+           <script src="" type="text/javascript"></script>
           <script src="libs/js/getSearch.js" type="text/javascript"></script>
           <script src="libs/js/map.js" type="text/javascript"></script>
          
