--- a/project1/index.html
+++ b/project1/index.html
@@ -34,11 +34,19 @@
       crossorigin=""
     />
 
-     <!--Clustering...-->
+    <!--Clustering...-->
 
-  <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css" />
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css" />
-   
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css"
+    />
+
     <!--leaflet link for javascript-->
     <script
       src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
@@ -47,7 +55,10 @@
     ></script>
 
     <!--Clustering...-->
-    <script type='text/javascript' src='https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js'></script>
+    <script
+      type="text/javascript"
+      src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"
+    ></script>
   </head>
   <body>
     <div class="header">
@@ -58,8 +69,8 @@
         <!-- Navs -->
         <ul class="nav justify-content-center">
           <!-- Dropdown -->
-          <select  class="nav-item bg-light" id="selcountry" >
-            <option  value="" disabled selected hidden>Select Country</option>
+          <select class="nav-item bg-light" id="selcountry">
+            <option value="" disabled selected hidden>Select Country</option>
             <option value="united%20kingdom">United Kingdom</option>
             <option value="germany">Germany</option>
             <option value="spain">Spain</option>
@@ -81,7 +92,12 @@
       <div id="mapid"></div>
 
       <!-- Logo image -->
-      <img id="recenter" onclick="myFunction()" src="venders/image/cursor3.png" alt="recenter" />
+      <img
+        id="recenter"
+        onclick="myFunction()"
+        src="venders/image/cursor3.png"
+        alt="recenter"
+      />
 
       <!-- Overlay box -->
       <div class="container">
@@ -126,31 +142,31 @@
               <td>Confirmed Covid Case:</td>
               <td id="txtconcovidcase"></td>
             </tr>
+            <tr></tr>
             <tr>
-              <tr>
-                <td class="icon_pic">
-                  <img src="venders/image/covid.png" alt="covid" />
-                </td>
-                <td>Deaths Covid Case:</td>
-                <td id="txtdeacovidcase"></td>
-              </tr>
-              <tr>
-                 <tr>
-                <td class="icon_pic">
-                  <img src="venders/image/covid.png" alt="covid" />
-                </td>
-                <td>Recovered Covid Case:</td>
-                <td id="txtreccovidcase"></td>
-              </tr>
-              <tr>
-                <td class="icon_pic">
-                  <img src="venders/image/covid.png" alt="covid" />
-                </td>
-                <td>Active Covid Case:</td>
-                <td id="txtcovidcase"></td>
-              </tr>
-              <tr>
-              <tr>
+              <td class="icon_pic">
+                <img src="venders/image/covid.png" alt="covid" />
+              </td>
+              <td>Deaths Covid Case:</td>
+              <td id="txtdeacovidcase"></td>
+            </tr>
+            <tr></tr>
+            <tr>
+              <td class="icon_pic">
+                <img src="venders/image/covid.png" alt="covid" />
+              </td>
+              <td>Recovered Covid Case:</td>
+              <td id="txtreccovidcase"></td>
+            </tr>
+            <tr>
+              <td class="icon_pic">
+                <img src="venders/image/covid.png" alt="covid" />
+              </td>
+              <td>Active Covid Case:</td>
+              <td id="txtcovidcase"></td>
+            </tr>
+            <tr></tr>
+            <tr>
               <td class="icon_pic">
                 <img src="venders/image/cultures.png" alt="population" />
               </td>
@@ -207,7 +223,7 @@
               <td>Geoname ID:</td>
               <td id="txtgeoname"></td>
             </tr>
-            <tr>
+            <tr></tr>
             <tr>
               <td class="icon_pic">
                 <img src="venders/image/wikipedia.png" alt="wiki" />
@@ -221,7 +237,6 @@
     </div>
 
     <div id="preloader">
-     
       <script src="libs/js/jquery.js" type="application/javascript"></script>
       <script src="libs/js/countryBorders.js" type="text/javascript"></script>
       <script src="libs/js/getCountryInfo.js" type="text/javascript"></script>
@@ -229,10 +244,8 @@
       <script src="libs/js/lines.js" type="text/javascript"></script>
       <script src="libs/js/getWeather.js" type="text/javascript"></script>
       <script src="libs/js/getWiki.js" type="text/javascript"></script>
-      <script src="" type="text/javascript"></script>
       <script src="libs/js/getSearch.js" type="text/javascript"></script>
       <script src="libs/js/map.js" type="text/javascript"></script>
-
       <script src="venders/bootstrap/js/bootstrap.min.js"></script>
     </div>
   </body>
