--- a/project1/index.html
+++ b/project1/index.html
@@ -238,13 +238,8 @@
 
     <div id="preloader">
       <script src="libs/js/jquery.js" type="application/javascript"></script>
-      <script src="libs/js/countryBorders.js" type="text/javascript"></script>
-      <script src="libs/js/getCountryInfo.js" type="text/javascript"></script>
-      <script src="libs/js/covid.js" type="text/javascript"></script>
+      <script src="libs/js/script.js" type="text/javascript"></script>
       <script src="libs/js/lines.js" type="text/javascript"></script>
-      <script src="libs/js/getWeather.js" type="text/javascript"></script>
-      <script src="libs/js/getWiki.js" type="text/javascript"></script>
-      <script src="libs/js/getSearch.js" type="text/javascript"></script>
       <script src="libs/js/map.js" type="text/javascript"></script>
       <script src="venders/bootstrap/js/bootstrap.min.js"></script>
     </div>
