--- a/project1/index.html
+++ b/project1/index.html
@@ -80,6 +80,150 @@
             <option value="italy">Italy</option>
             <option value="new%20zealand">New Zealand</option>
             <option value="canada">Canada</option>
+            <option value="Bahamas">Bahamas</option>
+            <option value="Costa Rica">Costa Rica</option>
+            <option value="Cuba">Cuba</option>
+            <option value="Greenland">Greenland</option>
+            <option value="Guatemala">Guatemala</option>
+            <option value="Haiti">Haiti</option>
+            <option value="Mexico">Mexico</option>
+            <option value="Nicaragua">Nicaragua</option>
+            <option value="Belize">Belize</option>
+            <option value="El%20Salvador">El Salvador</option>
+            <option value="Trinidad%20and%20Tobago">Trinidad and Tobago</option>
+            <option value="Honduras">Honduras</option>
+            <option value="Bolivia">Bolivia</option>
+            <option value="Brazil">Brazil</option>
+            <option value="Chile">Chile</option>
+            <option value="Panama">Panama</option>
+            <option value="Ecuador">Ecuador</option>
+            <option value="Guyana">Guyana</option>
+            <option value="Paraguay">Paraguay</option>
+            <option value="Suriname">Suriname</option>
+            <option value="Uruguay">Uruguay</option>
+            <option value="Jamaica">Jamaica</option>
+            <option value="Venezuela">Venezuela</option>
+            <option value="Afghanistan">Afghanistan</option>
+            <option value="United%20Arab%20Emirates">United Arab Emirates</option>
+            <option value="Azerbaijan">Azerbaijan</option>
+            <option value="Brunei">Brunei</option>
+            <option value="Cyprus">Cyprus</option>
+            <option value="Colombia">Colombia</option>
+            <option value="Argentina">Argentina</option>
+            <option value="Georgia">Georgia</option>
+            <option value="Indonesia">Indonesia</option>
+            <option value="Armenia">Armenia</option>
+            <option value="Iraq">Iraq</option>
+            <option value="Peru">Peru</option>
+            <option value="Israel">Israel</option>
+            <option value="Bangladesh">Bangladesh</option>
+            <option value="China">China</option>
+            <option value="Jordan">Jordan</option>
+            <option value="Bhutan">Bhutan</option>
+            <option value="Kazakhstan">Kazakhstan</option>
+            <option value="Kyrgyzstan">Kyrgyzstan</option>
+            <option value="Cambodia">Cambodia</option>
+            <option value="Korea">Korea</option>
+            <option value="Sri%20Lanka">Sri Lanka</option>
+            <option value="Mongolia">Mongolia</option>
+            <option value="Nepal">Nepal</option>
+            <option value="Oman">Oman</option>
+            <option value="Pakistan">Pakistan</option>
+            <option value="Iran">Iran</option>
+            <option value="India">India</option>
+            <option value="Qatar">Qatar</option>
+            <option value="Saudi%20Arabia">Saudi Arabia</option>
+            <option value="Syria">Syria</option>
+            <option value="Kuwait">Kuwait</option>
+            <option value="Tajikistan">Tajikistan</option>
+            <option value="Japan">Japan</option>
+            <option value="Myanmar">Myanmar</option>
+            <option value="Malaysia">Malaysia</option>
+            <option value="Timor-Leste">Timor-Leste</option>
+            <option value="Philippines">Philippines</option>
+            <option value="Uzbekistan">Uzbekistan</option>
+            <option value="Yemen">Yemen</option>
+            <option value="Burundi">Burundi</option>
+            <option value="Benin">Benin</option>
+            <option value="Botswana">Botswana</option>
+            <option value="Cameroon">Cameroon</option>
+            <option value="Algeria">Algeria</option>
+            <option value="Thailand">Thailand</option>
+            <option value="Vietnam">Vietnam</option>
+            <option value="Eritrea">Eritrea</option>
+            <option value="Turkey">Turkey</option>
+            <option value="Ethiopia">Ethiopia</option>
+            <option value="Angola">Angola</option>
+            <option value="Guinea">Guinea</option>
+            <option value="Gambia">Gambia</option>
+            <option value="Liberia">Liberia</option>
+            <option value="Congo">Congo</option>
+            <option value="Djibouti">Djibouti</option>
+            <option value="Lesotho">Lesotho</option>
+            <option value="Libya">Libya</option>
+            <option value="Morocco">Morocco</option>
+            <option value="Burkina%20Faso">Burkina Faso</option>
+            <option value="Egypt">Egypt</option>
+            <option value="Mozambique">Mozambique</option>
+            <option value="Malawi">Malawi</option>
+            <option value="Namibia">Namibia</option>
+            <option value="Niger">Niger</option>
+            <option value="Sudan">Sudan</option>
+            <option value="Ghana">Ghana</option>
+            <option value="Gabon">Gabon</option>
+            <option value="Senegal">Senegal</option>
+            <option value="Somalia">Somalia</option>
+            <option value="Mali">Mali</option>
+            <option value="Swaziland">Swaziland</option>
+            <option value="Kenya">Kenya</option>
+            <option value="Madagascar">Madagascar</option>
+            <option value="Togo">Togo</option>
+            <option value="Tanzania">Tanzania</option>
+            <option value="Zambia">Zambia</option>
+            <option value="Zimbabwe">Zimbabwe</option>
+            <option value="Nigeria">Nigeria</option>
+            <option value="Albania">Albania</option>
+            <option value="Austria">Austria</option>
+            <option value="Rwanda">Rwanda</option>
+            <option value="Belgium">Belgium</option>
+            <option value="Belarus">Belarus</option>
+            <option value="Switzerland">Switzerland</option>
+            <option value="Chad">Chad</option>
+            <option value="Tunisia">Tunisia</option>
+            <option value="Sierra%20Leone">Sierra Leone</option>
+            <option value="Estonia">Estonia</option>
+            <option value="Finland">Finland</option>
+            <option value="Uganda">Uganda</option>
+            <option value="Greece">Greece</option>
+            <option value="Croatia">Croatia</option>
+            <option value="Ireland">Ireland</option>
+            <option value="Bulgaria">Bulgaria</option>
+            <option value="Lithuania">Lithuania</option>
+            <option value="Luxembourg">Luxembourg</option>
+            <option value="Latvia">Latvia</option>
+            <option value="Denmark">Denmark</option>
+            <option value="Moldova">Moldova</option>
+            <option value="Montenegro">Montenegro</option>
+            <option value="Netherlands">Netherlands</option>
+            <option value="Norway">Norway</option>
+            <option value="Poland">Poland</option>
+            <option value="Russia">Russia</option>
+            <option value="Hungary">Hungary</option>
+            <option value="Slovakia">Slovakia</option>
+            <option value="Slovenia">Slovenia</option>
+            <option value="Sweden">Sweden</option>
+            <option value="Iceland">Iceland</option>
+            <option value="Kosovo">Kosovo</option>
+            <option value="Macedonia">Macedonia</option>
+            <option value="Romania">Romania</option>
+            <option value="Portugal">Portugal</option>
+            <option value="Serbia">Serbia</option>
+            <option value="Ukraine">Ukraine</option>
+            <option value="Papua%20New%20Guinea">Papua New Guinea</option>
+            <option value="Fiji">Fiji</option>
+            <option value="Vanuatu">Vanuatu</option>
+          
+
           </select>
           </div>
         
