--- a/project1/index.html
+++ b/project1/index.html
@@ -224,7 +224,8 @@
               <option value="United%20Arab%20Emirates">
                 United Arab Emirates
               </option>            
-              <option value="united%20kingdom">United Kingdom</option>          
+              <option value="united%20kingdom">United Kingdom</option>   
+              <option value="USA">United States</option>       
               <option value="Uruguay">Uruguay</option>           
               <option value="Uzbekistan">Uzbekistan</option>         
               <option value="Vanuatu">Vanuatu</option>
