--- a/project1/index.html
+++ b/project1/index.html
@@ -270,6 +270,13 @@
             </tr>
             <tr>
               <td class="icon_pic">
+                <img src="venders/image/flag.png" alt="globe" />
+              </td>
+              <td>Native Name:</td>
+              <td id="txtnative"></td>
+            </tr>
+            <tr>
+              <td class="icon_pic">
                 <img src="venders/image/flag1.png" alt="country" />
               </td>
               <td>Country Code:</td>
