--- a/project1/index.html
+++ b/project1/index.html
@@ -273,7 +273,7 @@
                 <img src="venders/image/flag.png" alt="globe" />
               </td>
               <td>Native Name:</td>
-              <td id="txtnative"></td>
+              <td id="txtcountryname"></td>
             </tr>
             <tr>
               <td class="icon_pic">
