--- a/project1/index.html
+++ b/project1/index.html
@@ -76,8 +76,9 @@
               onfocus="this.size=3;"
               onblur="this.size=1;"
               onchange="this.size=1; this.blur();"
-            >
+            > <!--
               <option value="" disabled selected hidden>Select Country</option>
+             
               <option value="Afghanistan">Afghanistan</option>
               <option value="Algeria">Algeria</option>
               <option value="Albania">Albania</option>
@@ -87,8 +88,9 @@
               <option value="australia">Australia</option>
               <option value="Austria">Austria</option>
               <option value="Azerbaijan">Azerbaijan</option>
-              <option value="Bangladesh">Bangladesh</option>
               <option value="Bahamas">Bahamas</option>
+              <option value="Bangladesh">Bangladesh</option>
+              
               <option value="Belize">Belize</option>
               <option value="Benin">Benin</option>
               <option value="Belgium">Belgium</option>
@@ -106,7 +108,7 @@
               <option value="canada">Canada</option>
               <option value="Colombia">Colombia</option>
               <option value="Congo">Congo</option>
-              <option value="Costa Rica">Costa Rica</option>
+              <option value="Costa%20Rica">Costa Rica</option>
               <option value="Croatia">Croatia</option>
               <option value="Cuba">Cuba</option>
               <option value="Chad">Chad</option>
@@ -233,7 +235,7 @@
               <option value="Vietnam">Vietnam</option>            
               <option value="Yemen">Yemen</option>
               <option value="Zambia">Zambia</option>
-              <option value="Zimbabwe">Zimbabwe</option>   
+              <option value="Zimbabwe">Zimbabwe</option>  --> 
             </select>
           </div>
 
