--- a/project1/index.html
+++ b/project1/index.html
@@ -108,7 +108,7 @@
               <td class="icon_pic">
                 <img src="venders/image/glob.png" alt="globe" />
               </td>
-              <td>Continent Code:</td>
+              <td>Continent Name:</td>
               <td id="txtcontinentcode"></td>
             </tr>
             <tr>
@@ -116,7 +116,7 @@
                 <img src="venders/image/flag.png" alt="globe" />
               </td>
               <td>Native Name:</td>
-              <td id="txtcountryname"></td>
+              <td id="txtnative"></td>
             </tr>
             <tr>
               <td class="icon_pic">
