--- a/showcase_Website/index.html
+++ b/showcase_Website/index.html
@@ -65,7 +65,8 @@
                     <h6>Let's make something <b>cool </b> together!</h6>
                     <a href="#my_portfolio" type="button" id="home_btn" class="btn btn-outline-secondary text-white border border-primary border-1 mt-1">Portfolio</a>
                     <a href="" type="button"  id="home_btn" class="btn btn-outline-secondary text-white border border-primary  border-1 mt-1">Download CV</a>
-                    <a href="https://github.com/PayalMoradiya/payalVimal" target="_blank"><img class="github_image mt-2" src="venders/image/github.png" alt="github image"></a>
+                    <a href="https://github.com/PayalMoradiya/payalVimal" target="_blank"><img class="github_image mt-2" src="venders/image/github3.png" alt="github image"></a>
+                    <a href="https://www.linkedin.com/in/payal-moradiya-b06557214/" target="_blank"><img class="linkdin_img" src="venders/image/linkedin1.png" alt="linkedin image"></a>
                 </div>
             </div>
         </div>
@@ -189,7 +190,7 @@
 <br>
 <div class="container">
   <div class="row">
-<img id="model" src="venders/image/project1.png" class="portfolio_bg " alt="Project1 image" >
+<img id="model" src="venders/image/project1-min.png" class="portfolio_bg " alt="Project1 image" >
 </div>
 </div>
 
@@ -205,7 +206,7 @@
       <div class="modal-body">
 
         <div class="card">
-          <img src="venders/image/project1.png" class="card-img-top border border-1 border-dark" alt="Project1 image">
+          <img src="venders/image/project1-min.png" class="card-img-top border border-1 border-dark" alt="Project1 image">
           <div class="card-body">
             <div class="col">
               <span class="badge rounded-pill my-3">HTML/CSS</span>
