--- a/showcase_Website/index.html
+++ b/showcase_Website/index.html
@@ -190,7 +190,7 @@
 <br>
 <div class="container">
   <div class="row">
-<img id="model" src="venders/image/project1-min.png" class="portfolio_bg " alt="Project1 image" >
+<img id="model" src="venders/image/project1-min.PNG" class="portfolio_bg " alt="Project1 image" >
 </div>
 </div>
 
@@ -206,7 +206,7 @@
       <div class="modal-body">
 
         <div class="card">
-          <img src="venders/image/project1-min.png" class="card-img-top border border-1 border-dark" alt="Project1 image">
+          <img src="venders/image/project1-min.PNG" class="card-img-top border border-1 border-dark" alt="Project1 image">
           <div class="card-body">
             <div class="col">
               <span class="badge rounded-pill my-3">HTML/CSS</span>
