--- a/project2/index.html
+++ b/project2/index.html
@@ -103,12 +103,12 @@
         <!--three cards-->
         
         <div class="row g-3 mt-2" >
-          <div class="col-md-3" >
+          <div class="col-md-3 card_width" >
             <div id="dashboard_block"  class="row g-0">
               <div class="col-md-4 bg-primary text-center">
                 <img class="card_image" src="venders/image/group.png" alt="group image">
               </div>
-              <div class="col-md-8">
+              <div class="col-md-8 ">
                 <div class="card-body bg-light text-center">
                   <h5 class="card-title"> EMPLOYEES</h5>
                   <p class="card-text" id="no_of_employee"></p>          
@@ -116,7 +116,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3" >
+          <div class="col-md-3 card_width" >
             <div id="dashboard_block1"  class="row g-0">
               <div class="col-md-4 bg-primary text-center">
                 <img class="card_image" src="venders/image/it-department.png" alt="it-department image">
@@ -129,7 +129,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-3" >
+          <div class="col-md-3 card_width" >
             <div id="dashboard_block2"  class="row g-0">
               <div class="col-md-4 bg-primary text-center">
                 <img class="card_image" src="venders/image/pin.png" alt="location image">
@@ -159,10 +159,10 @@
               <th scope="col">#</th>
               <th scope="col">Lastname</th>
               <th scope="col">Firstname</th>
-              <th scope="col">Job Title</th>
-              <th scope="col">Email</th>
-              <th scope="col">Department</th>
-              <th scope="col">Location</th>
+              <th scope="col" class="display_none">Job Title</th>
+              <th scope="col" class="display_none">Email</th>
+              <th scope="col" class="display_none">Department</th>
+              <th scope="col" class="display_none">Location</th>
               <th scope="col" class="text-center">Action</th>
             </tr>
           </thead>
