--- a/project2/index.html
+++ b/project2/index.html
@@ -140,13 +140,13 @@
         <table class="table table-hover table-fixedheader" id="myTable">
           <thead >
             <tr id="table_header">
-              <th scope="col">ID</th>
-              <th scope="col">Name</th>
-              <th scope="col" class="display_none">Job Title</th>
-              <th scope="col" class="display_none">Email</th>
-              <th scope="col" class="display_none">Department</th>
-              <th scope="col" class="display_none">Location</th>
-              <th scope="col" class="text-center">Action</th>
+              <th scope="col" id="ID">ID</th>
+              <th scope="col" id="ID-name">Name</th>
+              <th scope="col" id="ID-job" class="display_none">Job Title</th>
+              <th scope="col" id="ID-email" class="display_none">Email</th>
+              <th scope="col" id="ID-dep" class="display_none">Department</th>
+              <th scope="col" id="ID-loc" class="display_none">Location</th>
+              <th scope="col" id="ID-action" class="text-center">Action</th>
             </tr>
           </thead>
 
