--- a/project2/index.html
+++ b/project2/index.html
@@ -136,7 +136,7 @@
       <div class="heading_container">Employees List</div>
     </div>
     <div class="row" id="table-container">
-      <div class="col-12 mt-3 table_scroll" >
+      <div class="col-12 table_scroll" >
         <table class="table table-hover table-fixedheader" id="myTable">
           <thead >
             <tr id="table_header">
@@ -282,15 +282,15 @@
         <div class="heading_container">Departments</div>
       </div>
      
-     <div class="row" id="table-container">
+     <div class="row" id="table-container1">
        <div class="col-12 table_scroll" >
-         <table class="table table-hover" id="department_table">
+         <table class="table table-hover " id="department_table">
            <thead>
-             <tr id="table_header">
-               <th scope="col">#</th>
-               <th scope="col">Name</th>
-               <th scope="col">LocationID</th>
-               <th scope="col" class="action">Action</th>
+             <tr id="table_header1">
+               <th scope="col" id="dep-id">#</th>
+               <th scope="col" id="dep-name">Name</th>
+               <th scope="col" id="dep-locid">LocationID</th>
+               <th scope="col" id="dep-action" class="action">Action</th>
              </tr>
            </thead>
            <tbody class="department-table">
@@ -398,13 +398,13 @@
             </div>
           
           <div class="row" id="table-container">
-            <div class="col-10 mt-3  table_scroll" >
+            <div class="col-10  table_scroll" >
               <table class="table table-hover" id="location_table">
                 <thead>
                   <tr id="table_header">
-                    <th scope="col">#</th>
-                    <th scope="col">Name</th>
-                    <th scope="col" class="action">Action</th>
+                    <th scope="col"  id="loc-ID">#</th>
+                    <th scope="col" id="loc-name">Name</th>
+                    <th scope="col" id="loc-action" class="action">Action</th>
                   </tr>
                 </thead>
                 <tbody class="location-table">   
